Database & contact backend & sedation module

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/supabase-js": "^2.50.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -46,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "14.2.5",
@@ -53,6 +55,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "pg": "^8.16.2",
     "postcss": "8.4.30",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
